--- a/SeSacSlack/.gitIgnore
+++ b/SeSacSlack/.gitIgnore
@@ -2,6 +2,7 @@
 # Edit at https://www.toptal.com/developers/gitignore?templates=swift,xcode
 
 APIKey.swift
+GoogleService-Info.plist
 *.xcconfig
 
 ### Swift ###
